# Projet8

./: .dockerignore  .gitignore  Dockerfile  README.md  feature_rules.json  mlflow.db  pyproject.toml
.github/workflows/: python-tests.yml
database/: init_db.sql
model/: model.pkl
scripts/: Onnx_run_profiling.py  clean_logs.py  convert_to_onnx.py  profile_data.py  run_profiling.py
src/: app.py  custom_transformer.py  data_toolbox.py  model_wrapper.py  schema.py  train.py
tests/: test_api_and_populate.py  test_api_batch_predict  test_api_batch_predict.py  test_app.py
