[project]
name = "projet8"
version = "0.1.0"
description = ""
authors = [
    {name = "Apinsun", email = "aranudpinsun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# On garde les dépendances de prod légères
streamlit = "^1.31.0"
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
scikit-learn = "^1.4.0"
lightgbm = "^4.3.0"
joblib = "^1.3.2"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
pydantic = "^2.13.0"
supabase = "^2.28.3"

[tool.poetry.group.training.dependencies]
# MLflow est en version 2.11+ actuellement pour la stabilité 3.12
mlflow = ">=2.11.0"
shap = ">=0.44.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
protobuf = "<4.0.0"
# ON FORCE ICI LA VERSION QUI CONTIENT DocumentNode
graphql-core = ">=3.1.0,<3.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
